---
source: tests/parse.rs
description: "// Parser should sync and find errors on all of these lines!\nvar x = { 4; };\n\n{ a; b; c }\n\n{ lol; + 4; }\n\n{;}\n\nprint { x };\n"
expression: render_dcx()
---
error: unexpected `{` token in input
  --> err_block_stmts.lx:2:9
  |
2 | var x = { 4; };
  |         ^ unexpected token here
  |
  = note: expected expression

error: unterminated statement
  --> err_block_stmts.lx:4:11
  |
4 | { a; b; c }
  |         - ^ statement should have been terminated here
  |         |  
  |         this statement
  |
  = note: expected `;`

error: unclosed braces
  --> err_block_stmts.lx:6:8
  |
6 | { lol; + 4; }
  | -      ^ braces should have been closed here
  | |       
  | braces opened here
  |
  = note: expected `}`

error: unexpected `+` token in input
  --> err_block_stmts.lx:6:8
  |
6 | { lol; + 4; }
  |        ^ unexpected token here
  |
  = note: expected expression

error: unclosed braces
  --> err_block_stmts.lx:8:2
  |
8 | {;}
  | -^ braces should have been closed here
  | | 
  | braces opened here
  |
  = note: expected `}`

error: statement terminated prematurely
  --> err_block_stmts.lx:8:2
  |
8 | {;}
  |  ^ statement terminated here
  |
  = note: expected expression

error: unexpected `}` token in input
  --> err_block_stmts.lx:8:3
  |
8 | {;}
  |   ^ unexpected token here
  |
  = note: expected expression

error: unexpected `{` token in input
   --> err_block_stmts.lx:10:7
   |
10 | print { x };
   |       ^ unexpected token here
   |
   = note: expected expression
